# TED5

./: .gitattributes  CMakeLists.txt  README.md
assets/: rott.i
docs/: hackrott.txt  igrab.txt  info.txt  tedhelp.txt
source/borland/: borland.c  borland.h
source/igrab/: comp_a.asm  compat.c  dograb.c  finish.c  grabcga.c  grabega.c  grabvga.c  igrab.c  igrab.h  jhuff.c  lbmload.c  makefile  xms.c  xms.h
